--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,11 +14,22 @@
 <% end %>
 
 <h4> 
-	NOTICE:
+	NOTICE: Since deploying it in cloud as a web all these conditions are to be taken care
 	<br>
 	<ul>
+		<li> Upload only Order_Feed & Last mile or similar kind of sheet which is sufficient to generate this details</li>
+		<br>
 <li>
 As its a free hosting site, Please Upload max of 250 records per import.
-else the server will be timeout
+else the server will be timed out.
 </li>
+<br>
+<li>While uploading a sheet have check whether your sheet has `order code` or `Order #` . Else it will through error.</li>
+<br>
+<li>DB can store only 10,000 records so please be aware of it</li>
+<br>
+<li>Due to unavailability of `ruby gem` for reading all formats, Here you can only upload .xlsx (the latest format of excel in MS) so, please convert your file and import, else it will through error. </li>
+<br>
+<li>Before Downloading the CSV/xls please feed the DB by uploading the input sheet. Initially the DB has no records.</li>
+<br>
 </h4>
